spacing need to fixed image on right side. 60%

--- a/sass/scss/_hero.scss
+++ b/sass/scss/_hero.scss
@@ -7,8 +7,10 @@
     justify-content: center;
     width: 17.25rem;
     padding: 0.9375rem;
+    margin-left: 5%;
     color: white;
   }
+
   &__truck-background {
     background: $greenTruck;
     img {
