--- a/style.css
+++ b/style.css
@@ -214,6 +214,7 @@ button,
   justify-content: center;
   width: 17.25rem;
   padding: 0.9375rem;
+  margin-left: 5%;
   color: white;
 }
 .hero__truck-background {
